--- a/site/root.conf
+++ b/site/root.conf
@@ -3,13 +3,16 @@ tile        = Kamunagara
 host        = localhost
 url         = http://{$site.host}/kamuna
 
+[cache]
+type        = dir
+option.path = {$root.dir}/var/cache
+
 [app]
-dir         = {$root.dir}/app
+dir         = {$root.dir}/var/app
 default     = #home
 
 [template]
-dir         = {$root.dir}/template
-cache       = {$root.dir}/cache
+dir         = {$root.dir}/var/template
 
 [resource]
 css         = {$root.dir}/res/css
@@ -24,6 +27,7 @@ home        = system.default
 404         = system.404
 500         = system.500
 
-[cache]
-type        = dir
-option.path = {$root.dir}/cache
+
+[enable]
+system      = 1
+user        = 1
