--- a/site/root.conf
+++ b/site/root.conf
@@ -1,5 +1,5 @@
 [site]
-tile        = Kamunagara
+title       = NyaaSystem
 host        = localhost
 url         = http://{$site.host}/kamuna
 
@@ -24,10 +24,3 @@ dir         = {$root.dir}/data
 
 [app.map]
 home        = system.default
-404         = system.404
-500         = system.500
-
-
-[enable]
-system      = 1
-user        = 1
