--- a/package/system/package.conf
+++ b/package/system/package.conf
@@ -1,9 +1,9 @@
 [app]
 _root             = system.class.php
 default           = default.class.php
+redirect          = redirect.class.php
 
 [alias]
-redirect          = default
 404               = default
 
 [template]
