add info mation of templates

--- a/package/user/package.conf
+++ b/package/user/package.conf
@@ -8,3 +8,7 @@ register   = _root
 [template]
 login      = template/login.html
 register   = template/register.html
+
+[info.template]
+login = ログインフォーム
+register = 新規登録フォーム
